--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,9 @@ spring:
     url: jdbc:mysql://localhost:3306/earth?serverTimezone=GMT%2b8&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
     password: root
-
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 mybatis-plus:
   mapper-locations: classpath:com.earth.**.mapper
   typeAliasesPackage: com.earth.**.entity
