--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,20 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.31.72.ALL</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.17.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
+        <!--需要覆盖默认的ES版本配置，与本地引入的ES版本保持一致-->
+        <elasticsearch.version>7.17.4</elasticsearch.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
